# MyStonks

./: pyproject.toml
src/core/: settings.py
src/stocks/: models.py  polygon.py
src/users/: forms.py  models.py  views.py
