[tool.poetry]
name = "mystonks"
version = "0.1.0"
description = ""
authors = ["mmackowsky <maciostah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
docker = "^7.1.0"
plotly = "^5.23.0"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
